--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+Are you able to check the code and the blockchain encryption on the below code? 
+
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
